maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:60: error: too many arguments for method isOverBaggle: ()Boolean
  if(!isOverBaggle(getX(), getY()))
                  ^